Remove commons-io in favor of JDK 11+ features